AKS/12-ExternalDNS-for-AzureDNS-on-AKS/kube-manifests/02-NginxApp1/03-Ingress-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  #annotations:
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: eapp1.jetarathod.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
